# SymmState

./: .gitignore  README.md  SMODESTODO.txt  THANKS.txt  TODO  TODO2.txt  citation.cff  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: tests.yml
src/symmstate/: __init__.py  __main__.py  _symm_state_core.py  cli.py  slurm_file.py  unit_cell_module.py
src/symmstate.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/symmstate/abinit/: __init__.py  abinit_convergence_file.py  abinit_file.py  abinit_parser.py  abinit_structure.py  abinit_unit_cell.py  anaddb_file.py  mrgddb_file.py
src/symmstate/config/: __init__.py  settings.py  symm_state_settings.py
src/symmstate/flpz/: __init__.py  data_analysis.py  perturbations.py  smodes_processor.py
src/symmstate/iso/: __init__.py  iso_file.py
src/symmstate/polynomial_fitting/: polynomialFitting3DView.py
src/symmstate/pseudopotentials/: __init__.py  pseudopotential_manager.py
src/symmstate/slurm/: __init__.py  slurm_file.py  slurm_header.py
src/symmstate/symmadaptstruct/: symmadaptstruct.py
src/symmstate/utils/: __init__.py  (+7 more)
symmstate/: _symm_state_core.py  output.prof  slurm_file.py  unit_cell_module.py
symmstate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
symmstate/abinit/: abinit_file.py  abinit_unit_cell.py
symmstate/flpz/: flpz_core.py  perturbations.py  smodes_processor.py
symmstate/polynomial_fitting/: polynomialFitting2D3Dold.py  totEnergytoDat.sh
tests/: conftest.py
tests/future/: TODO.txt  abinit_convergence_file.py  abinit_file.py  example_file.abo  general_data_parser.py  slurm_file_future.py
tests/integration/: test_perturbations.py  test_smodes_workflowlpy
tests/live/: test_energy_program.py  test_file.abi  test_smodes_file.txt
tests/misc/: test_pymatgen.py
tests/unit/: dummy.abi  settings.txt  test_abinit_file.py  test_abinit_unit_cell.py  test_electro_tensor.py  test_energy_program.py  test_perturbations.py  test_pseudopotential.py  test_slurm_jobs.py  test_smodes_calculator.py  test_template_manager.py  test_unit_cell_module.py
(+34 files in other folders)
