[project]
name = "symmstate"
version = "0.1.0"
description = "Solid-state Physics Package for Symmetry Based Calculations!"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",  # Update with your license
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "pymatgen>=2023.7.20",
    "numpy>=1.21",
    "scipy>=1.7",
    "jinja2>=3.0",
    "pyyaml>=6.0",
    "fireworks>=1.9",
    "pydantic>=1.9"
]

[project.scripts]
symmstate = "symmstate.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.3",
    "mypy>=0.950",
    "flake8>=4.0"
]
ml = [
    "tensorflow>=2.8",
    "torch>=1.11"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]