[metadata]
name = symmstate
version = 1.0.0
author = Isaac Perez
author_email = iperez@g.hmc.edu
description = SymmState: Unlocking the elegance of symmetry in the solid state
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/symmstate
classifiers =
    Programming Language :: Python :: 3
    License :: 
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.21
    pymatgen>=2023.7.20
    matplotlib>=3.6
    scipy>=1.9
    click

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov>=4.0
    mypy>=1.0
    flake8>=5.0
ml =
    tensorflow>=2.10
    torch>=1.13

[options.entry_points]
console_scripts =
    symmstate = symmstate.cli:cli